uing/rawui.nim


    TextWeightMinimum      = 0,
    TextWeightThin         = 100,
    TextWeightUltraLight   = 200,
    TextWeightLight        = 300,
    TextWeightBook         = 350,
    TextWeightNormal       = 400,
    TextWeightMedium       = 500,
    TextWeightSemiBold     = 600,
    TextWeightBold         = 700,
    TextWeightUltraBold    = 800,
    TextWeightHeavy        = 900,
    TextWeightUltraHeavy   = 950,
    TextWeightMaximum      = 1000

  TextItalic* {.size: sizeof(cint).} = enum
    ## `TextItalic` represents possible italic modes for a font. Italic
    ## represents "true" italics where the slanted glyphs have custom
    ## shapes, whereas oblique represents italics that are merely slanted
    ## versions of the normal glyphs. Most fonts usually have one or the
    ## other.

    TextItalicNormal, 
    TextItalicOblique, 
    TextItalicItalic


proc newWeightAttribute*(weight: TextWeight): ptr Attribute {.cdecl,
    importc: "uiNewWeightAttribute", libui.}

proc attributeWeight*(a: ptr Attribute): TextWeight {.cdecl,
    importc: "uiAttributeWeight", libui.}

proc newItalicAttribute*(italic: TextItalic): ptr Attribute {.cdecl,
    importc: "uiNewItalicAttribute", libui.}

proc attributeItalic*(a: ptr Attribute): TextItalic {.cdecl,
    importc: "uiAttributeItalic", libui.}

type
  TextStretch* {.size: sizeof(cint).} = enum
    ## `TextStretch` represents possible stretches (also called "widths")
    ## of a font.
    ## 
    ## Note that due to restrictions in early versions of Windows, some
    ## fonts have "special" stretches be exposed in many programs as
    ## separate font families. This is perhaps most notable with
    ## Arial Condensed. libui does not do this, even on Windows (because
    ## the DirectWrite API libui-ng uses on Windows does not do this); to
    ## specify Arial Condensed, use family Arial and stretch
    ## `TextStretchCondensed`.

    TextStretchUltraCondensed,
    TextStretchExtraCondensed,
    TextStretchCondensed,
    TextStretchSemiCondensed,
    TextStretchNormal,
    TextStretchSemiExpanded,
    TextStretchExpanded,
    TextStretchExtraExpanded,
    TextStretchUltraExpanded

proc newStretchAttribute*(stretch: TextStretch): ptr Attribute {.cdecl,
    importc: "uiNewStretchAttribute", libui.}

proc attributeStretch*(a: ptr Attribute): TextStretch {.cdecl,
    importc: "uiAttributeStretch", libui.}

proc newColorAttribute*(r: cdouble; g: cdouble; b: cdouble; a: cdouble): ptr Attribute {.
    cdecl, importc: "uiNewColorAttribute", libui.}

proc attributeColor*(a: ptr Attribute; r: ptr cdouble; g: ptr cdouble; b: ptr cdouble;
                    alpha: ptr cdouble) {.cdecl, importc: "uiAttributeColor",
                                       libui.}

proc newBackgroundAttribute*(r: cdouble; g: cdouble; b: cdouble; a: cdouble): ptr Attribute {.
    cdecl, importc: "uiNewBackgroundAttribute", libui.}

type
  Underline* {.size: sizeof(cint).} = enum
    ## `Underline` specifies a type of underline to use on text.

    UnderlineNone, 
    UnderlineSingle, 
    UnderlineDouble, 
    UnderlineSuggestion, ## wavy or dotted underlines used for spelling/grammar checkers 

  UnderlineColor* {.size: sizeof(cint).} = enum
    ## `UnderlineColor` specifies the color of any underline on the text it
    ## is applied to, regardless of the type of underline. In addition to
    ## being able to specify a custom color, you can explicitly specify
    ## platform-specific colors for suggestion underlines; to use them
    ## correctly, pair them with `UnderlineSuggestion` (though they can
    ## be used on other types of underline as well).
    ## 
    ## If an underline type is applied but no underline color is
    ## specified, the text color is used instead. If an underline color
    ## is specified without an underline type, the underline color
    ## attribute is ignored, but not removed from the `AttributedString`.

    UnderlineColorCustom,
    UnderlineColorSpelling,
    UnderlineColorGrammar,
    UnderlineColorAuxiliary, ## for instance, the color used by smart replacements on macOS or in Microsoft Office   


proc newUnderlineAttribute*(u: Underline): ptr Attribute {.cdecl,
    importc: "uiNewUnderlineAttribute", libui.}

proc attributeUnderline*(a: ptr Attribute): Underline {.cdecl,
    importc: "uiAttributeUnderline", libui.}

proc newUnderlineColorAttribute*(u: UnderlineColor; r: cdouble; g: cdouble; b: cdouble;
                                a: cdouble): ptr Attribute {.cdecl,
    importc: "uiNewUnderlineColorAttribute", libui.}

proc attributeUnderlineColor*(a: ptr Attribute; u: ptr UnderlineColor; r: ptr cdouble;
                             g: ptr cdouble; b: ptr cdouble; alpha: ptr cdouble) {.cdecl,
    importc: "uiAttributeUnderlineColor", libui.}

type
  OpenTypeFeatures* = object

  OpenTypeFeaturesForEachFunc* = proc (otf: ptr OpenTypeFeatures; a: char; b: char;
                                    c: char; d: char; value: uint32; data: pointer): ForEach {.
      cdecl.}


proc newOpenTypeFeatures*(): ptr OpenTypeFeatures {.cdecl,
    importc: "uiNewOpenTypeFeatures", libui.}

proc freeOpenTypeFeatures*(otf: ptr OpenTypeFeatures) {.cdecl,
    importc: "uiFreeOpenTypeFeatures", libui.}

proc openTypeFeaturesClone*(otf: ptr OpenTypeFeatures): ptr OpenTypeFeatures {.cdecl,
    importc: "uiOpenTypeFeaturesClone", libui.}

proc openTypeFeaturesAdd*(otf: ptr OpenTypeFeatures; a: char; b: char; c: char; d: char;
                         value: uint32) {.cdecl, importc: "uiOpenTypeFeaturesAdd",
                                        libui.}

proc openTypeFeaturesRemove*(otf: ptr OpenTypeFeatures; a: char; b: char; c: char; d: char) {.
    cdecl, importc: "uiOpenTypeFeaturesRemove", libui.}

proc openTypeFeaturesGet*(otf: ptr OpenTypeFeatures; a: char; b: char; c: char; d: char;
                         value: ptr uint32): cint {.cdecl,
    importc: "uiOpenTypeFeaturesGet", libui.}

proc openTypeFeaturesForEach*(otf: ptr OpenTypeFeatures;
                             f: OpenTypeFeaturesForEachFunc; data: pointer) {.cdecl,
    importc: "uiOpenTypeFeaturesForEach", libui.}

proc newFeaturesAttribute*(otf: ptr OpenTypeFeatures): ptr Attribute {.cdecl,
    importc: "uiNewFeaturesAttribute", libui.}

proc attributeFeatures*(a: ptr Attribute): ptr OpenTypeFeatures {.cdecl,
    importc: "uiAttributeFeatures", libui.}

type
  AttributedStringForEachAttributeFunc* = proc (s: ptr AttributedString;
      a: ptr Attribute; start: csize_t; `end`: csize_t; data: pointer): ForEach {.cdecl.}


proc newAttributedString*(initialString: cstring): ptr AttributedString {.cdecl,
    importc: "uiNewAttributedString", libui.}

proc freeAttributedString*(s: ptr AttributedString) {.cdecl,
    importc: "uiFreeAttributedString", libui.}

proc attributedStringString*(s: ptr AttributedString): cstring {.cdecl,
    importc: "uiAttributedStringString", libui.}

proc attributedStringLen*(s: ptr AttributedString): csize_t {.cdecl,
    importc: "uiAttributedStringLen", libui.}

proc attributedStringAppendUnattributed*(s: ptr AttributedString; str: cstring) {.
    cdecl, importc: "uiAttributedStringAppendUnattributed", libui.}

proc attributedStringInsertAtUnattributed*(s: ptr AttributedString; str: cstring;
    at: csize_t) {.cdecl, importc: "uiAttributedStringInsertAtUnattributed",
                 libui.}

proc attributedStringDelete*(s: ptr AttributedString; start: csize_t; `end`: csize_t) {.
    cdecl, importc: "uiAttributedStringDelete", libui.}

proc attributedStringSetAttribute*(s: ptr AttributedString; a: ptr Attribute;
                                  start: csize_t; `end`: csize_t) {.cdecl,
    importc: "uiAttributedStringSetAttribute", libui.}

proc attributedStringForEachAttribute*(s: ptr AttributedString;
                                      f: AttributedStringForEachAttributeFunc;
                                      data: pointer) {.cdecl,
    importc: "uiAttributedStringForEachAttribute", libui.}

proc attributedStringNumGraphemes*(s: ptr AttributedString): csize_t {.cdecl,
    importc: "uiAttributedStringNumGraphemes", libui.}

proc attributedStringByteIndexToGrapheme*(s: ptr AttributedString; pos: csize_t): csize_t {.
    cdecl, importc: "uiAttributedStringByteIndexToGrapheme", libui.}

proc attributedStringGraphemeToByteIndex*(s: ptr AttributedString; pos: csize_t): csize_t {.
    cdecl, importc: "uiAttributedStringGraphemeToByteIndex", libui.}

type
  FontDescriptor* {.bycopy.} = object
    ## `FontDescriptor` provides a complete description of a font where
    ## one is needed. Currently, this means as the default font of a
    ## DrawTextLayout and as the data returned by `FontButton <#FontButton>`_.
    ## 
    ## All the members operate like the respective `Attribute`s.
    
    family* : cstring
    size*   : cdouble
    weight* : TextWeight
    italic* : TextItalic
    stretch*: TextStretch


proc loadControlFont*(f: ptr FontDescriptor) {.cdecl, importc: "uiLoadControlFont",
    libui.}
proc freeFontDescriptor*(desc: ptr FontDescriptor) {.cdecl,
    importc: "uiFreeFontDescriptor", libui.}

type
  DrawTextLayout* = object

  DrawTextAlign* {.size: sizeof(cint).} = enum
    ## `DrawTextAlign` specifies the alignment of lines of text in a
    ## `DrawTextLayout`.
    
    DrawTextAlignLeft,
    DrawTextAlignCenter
    DrawTextAlignRight

  DrawTextLayoutParams* {.bycopy.} = object
    ## `DrawTextLayoutParams` describes a `DrawTextLayout`.
    ## `defaultFont` is used to render any text that is not attributed
    ## sufficiently in `string`. `width` determines the width of the bounding
    ## box of the text; the height is determined automatically.
    
    string*      : ptr AttributedString
    defaultFont* : ptr FontDescriptor
    width*       : cdouble
    align*       : DrawTextAlign

proc drawNewTextLayout*(params: ptr DrawTextLayoutParams): ptr DrawTextLayout {.cdecl,
    importc: "uiDrawNewTextLayout", libui.}

proc drawFreeTextLayout*(tl: ptr DrawTextLayout) {.cdecl,
    importc: "uiDrawFreeTextLayout", libui.}

proc drawText*(c: ptr DrawContext; tl: ptr DrawTextLayout; x: cdouble; y: cdouble) {.cdecl,
    importc: "uiDrawText", libui.}

proc drawTextLayoutExtents*(tl: ptr DrawTextLayout; width: ptr cdouble;
                           height: ptr cdouble) {.cdecl,
    importc: "uiDrawTextLayoutExtents", libui.}

type
  FontButton* = object of Control

template fontButton*(this: untyped): untyped =
  (cast[ptr FontButton]((this)))


proc fontButtonFont*(b: ptr FontButton; desc: ptr FontDescriptor) {.cdecl,
    importc: "uiFontButtonFont", libui.}

proc fontButtonOnChanged*(b: ptr FontButton; f: proc (sender: ptr FontButton;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiFontButtonOnChanged", libui.}

proc newFontButton*(): ptr FontButton {.cdecl, importc: "uiNewFontButton",
                                    libui.}

proc freeFontButtonFont*(desc: ptr FontDescriptor) {.cdecl,
    importc: "uiFreeFontButtonFont", libui.}

type
  ColorButton* = object of Control

template colorButton*(this: untyped): untyped =
  (cast[ptr ColorButton]((this)))


proc colorButtonColor*(b: ptr ColorButton; r: ptr cdouble; g: ptr cdouble;
                      bl: ptr cdouble; a: ptr cdouble) {.cdecl,
    importc: "uiColorButtonColor", libui.}

proc colorButtonSetColor*(b: ptr ColorButton; r: cdouble; g: cdouble; bl: cdouble;
                         a: cdouble) {.cdecl, importc: "uiColorButtonSetColor",
                                     libui.}

proc colorButtonOnChanged*(b: ptr ColorButton; f: proc (sender: ptr ColorButton;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiColorButtonOnChanged", libui.}

proc newColorButton*(): ptr ColorButton {.cdecl, importc: "uiNewColorButton",
                                      libui.}

type
  Form* = object of Control

template form*(this: untyped): untyped =
  (cast[ptr Form]((this)))

